iptables
# Generated by iptables-save v1.6.0 on Thu Apr 19 20:02:27 2018
*nat
:PREROUTING ACCEPT [208:12105]
:INPUT ACCEPT [46:2573]
:OUTPUT ACCEPT [4:542]
:POSTROUTING ACCEPT [190:10534]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.21.0.0/16 ! -o br-48c2a7d28096 -j MASQUERADE
-A POSTROUTING -s 172.20.0.0/16 ! -o br-f0727f1c58ca -j MASQUERADE
-A POSTROUTING -s 172.19.0.0/16 ! -o br-26b0b62f6324 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-d4c61d94474b -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.21.0.2/32 -d 172.21.0.2/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A DOCKER -i br-48c2a7d28096 -j RETURN
-A DOCKER -i br-f0727f1c58ca -j RETURN
-A DOCKER -i br-26b0b62f6324 -j RETURN
-A DOCKER -i br-d4c61d94474b -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 8080 -j DNAT --to-destination 172.17.0.2:8080
-A DOCKER ! -i br-48c2a7d28096 -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.21.0.2:80
COMMIT
# Completed on Thu Apr 19 20:02:27 2018
# Generated by iptables-save v1.6.0 on Thu Apr 19 20:02:27 2018
*filter
:INPUT ACCEPT [420:27726]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [387:210417]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o br-48c2a7d28096 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-48c2a7d28096 -j DOCKER
-A FORWARD -i br-48c2a7d28096 ! -o br-48c2a7d28096 -j ACCEPT
-A FORWARD -i br-48c2a7d28096 -o br-48c2a7d28096 -j ACCEPT
-A FORWARD -o br-f0727f1c58ca -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-f0727f1c58ca -j DOCKER
-A FORWARD -i br-f0727f1c58ca ! -o br-f0727f1c58ca -j ACCEPT
-A FORWARD -i br-f0727f1c58ca -o br-f0727f1c58ca -j ACCEPT
-A FORWARD -o br-26b0b62f6324 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-26b0b62f6324 -j DOCKER
-A FORWARD -i br-26b0b62f6324 ! -o br-26b0b62f6324 -j ACCEPT
-A FORWARD -i br-26b0b62f6324 -o br-26b0b62f6324 -j ACCEPT
-A FORWARD -o br-d4c61d94474b -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-d4c61d94474b -j DOCKER
-A FORWARD -i br-d4c61d94474b ! -o br-d4c61d94474b -j ACCEPT
-A FORWARD -i br-d4c61d94474b -o br-d4c61d94474b -j ACCEPT
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.21.0.2/32 ! -i br-48c2a7d28096 -o br-48c2a7d28096 -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER-ISOLATION -i br-f0727f1c58ca -o br-48c2a7d28096 -j DROP
-A DOCKER-ISOLATION -i br-48c2a7d28096 -o br-f0727f1c58ca -j DROP
-A DOCKER-ISOLATION -i br-26b0b62f6324 -o br-48c2a7d28096 -j DROP
-A DOCKER-ISOLATION -i br-48c2a7d28096 -o br-26b0b62f6324 -j DROP
-A DOCKER-ISOLATION -i br-d4c61d94474b -o br-48c2a7d28096 -j DROP
-A DOCKER-ISOLATION -i br-48c2a7d28096 -o br-d4c61d94474b -j DROP
-A DOCKER-ISOLATION -i docker0 -o br-48c2a7d28096 -j DROP
-A DOCKER-ISOLATION -i br-48c2a7d28096 -o docker0 -j DROP
-A DOCKER-ISOLATION -i br-26b0b62f6324 -o br-f0727f1c58ca -j DROP
-A DOCKER-ISOLATION -i br-f0727f1c58ca -o br-26b0b62f6324 -j DROP
-A DOCKER-ISOLATION -i br-d4c61d94474b -o br-f0727f1c58ca -j DROP
-A DOCKER-ISOLATION -i br-f0727f1c58ca -o br-d4c61d94474b -j DROP
-A DOCKER-ISOLATION -i docker0 -o br-f0727f1c58ca -j DROP
-A DOCKER-ISOLATION -i br-f0727f1c58ca -o docker0 -j DROP
-A DOCKER-ISOLATION -i br-d4c61d94474b -o br-26b0b62f6324 -j DROP
-A DOCKER-ISOLATION -i br-26b0b62f6324 -o br-d4c61d94474b -j DROP
-A DOCKER-ISOLATION -i docker0 -o br-26b0b62f6324 -j DROP
-A DOCKER-ISOLATION -i br-26b0b62f6324 -o docker0 -j DROP
-A DOCKER-ISOLATION -i docker0 -o br-d4c61d94474b -j DROP
-A DOCKER-ISOLATION -i br-d4c61d94474b -o docker0 -j DROP
-A DOCKER-ISOLATION -j RETURN
COMMIT
# Completed on Thu Apr 19 20:02:27 2018
